...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qhg-QN-gvF">
                                <rect key="frame" x="138" y="327" width="45" height="30"/>
                                <state key="normal" title="使い方"/>
                                <connections>
                                    <segue destination="wel-c0-vKj" kind="push" id="vGt-8a-oGU"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z9f-dy-3CX">
                                <rect key="frame" x="138" y="185" width="45" height="30"/>
                                <state key="normal" title="使う"/>
                                <connections>
                                    <segue destination="KG3-rI-5s3" kind="push" id="WvR-QF-fDD"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="ここにイメージが入ります" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVR-ys-dnG">
                                <rect key="frame" x="49" y="65" width="223" height="20"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bB1-7Q-C7g">
                                <rect key="frame" x="129" y="432" width="30" height="30"/>
                                <state key="normal" title="支払"/>
                                <connections>
                                    <action selector="Result_Action_Btn:" destination="KG3-rI-5s3" eventType="touchUpInside" id="NMK-UG-igc"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nMu-lR-fTF">
                                <rect key="frame" x="30" y="502" width="252" height="29"/>
...
